--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     </div>
 </div>
 <button id="reset_btn">Reset Game</button>
+<div>Develop by Suwah</div>
 <script src="app.js"></script>
 </html>
